# insist

./: 2026-06-24_genllm_cpu_only_benchmark.md  LICENSE  README.md
2026-06-23_cpp_learning_projects/: .gitignore  CHECKIN.md  CMakeLists.txt  README.md
2026-06-23_cpp_learning_projects/docs/: architecture.mmd  flowchart.mmd  technical_design.md
2026-06-23_cpp_learning_projects/examples/: client_main.cpp  server_main.cpp
2026-06-23_cpp_learning_projects/include/minirpc/: client.hpp  event_loop.hpp  framing.hpp  message.hpp  protobuf_wire.hpp  server.hpp  session.hpp
2026-06-23_cpp_learning_projects/proto/: rpc.proto
2026-06-23_cpp_learning_projects/src/: client.cpp  event_loop.cpp  message.cpp  protobuf_wire.cpp  server.cpp  session.cpp
2026-06-23_cpp_learning_projects/tests/: protocol_tests.cpp
2026-06-25_cpu_only_inference_and_practical_kernel/: CHECKIN.md
2026-06-25_cpu_only_inference_and_practical_kernel/cpu_only_inference/: CPU-only推理性能对比报告_20260625.md  run_cpu_only_benchmark.py
2026-06-25_cpu_only_inference_and_practical_kernel/practical_kernel/: flash_attention_simple_stand.cu  tiled_flash_att_mine.cu  tiled_flash_attention_stand_hpc.cu
2026.6.27 demo项目 打卡/: CHECKIN.md
2026.6.27 demo项目 打卡/softmax-profile-card/: CMakeLists.txt  README.md  reference.py
2026.6.27 demo项目 打卡/softmax-profile-card/kernels/: softmax_block.cu  softmax_naive.cu
2026.6.27 demo项目 打卡/softmax-profile-card/profiles/: softmax.md
2026.6.27 demo项目 打卡/softmax-profile-card/src/: softmax_bench.cu
2026.6.27 demo项目 打卡/softmax-profile-card/tests/: test_softmax.py
2026_6_25_topo_slowrank_bandwidth/: nccl_slow_rank_analysis_flow (1).md
(+8 files in other folders)
